Bug 1068003 - [UX][Cost Control] Switches' labels misaligned in Cost Control's settings

--- a/apps/costcontrol/style/views/settings.css
+++ b/apps/costcontrol/style/views/settings.css
@@ -11,10 +11,6 @@
 #settings-view.view {
   top: 0;
 }
-#settings-view label span {
-  padding-left: 0.5rem;
-}
-
 
 /* low limit */
 .low-limit-container {
